--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 		<module>guestbook1</module>
 		<module>emaillist02</module>
 		<module>guestbook02</module>
+		<module>jstlel</module>
 	</modules>
 	
 	
